# nmfgpu

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  main.cpp
include/: nmfgpu.h
source/: CMakeLists.txt  CMakeLists.txt~
source/common/: Event.cpp  Event.h  Interface.cpp  Interface.h  Logging.cpp  Logging.h  Matrix.cpp  Matrix.h  MatrixDescription.h  Memory.h  Misc.h  Stream.cpp  Stream.h  Traits.h  Wrapper.cpp  Wrapper.h
source/init/: CopyStrategy.cpp  CopyStrategy.h  EInNMF.cu  EInNMF.h  InitializationStrategy.cpp  InitializationStrategy.h  KMeansStrategy.cpp  KMeansStrategy.h  KernelMeanColumn.cu  KernelMeanColumn.h  MeanColumnStrategy.cpp  MeanColumnStrategy.h  RandomValueStrategy.cpp  RandomValueStrategy.h
source/kmeans/: kMeans.cu  kMeans.h
source/nmf/: Algorithm.cpp  Algorithm.h  AlgorithmAlternatingHoyerConstrainedLeastSquares.h  AlgorithmAlternatingLeastSquares.h  AlgorithmGradientDescentConstrainedLeastSquares.h  AlgorithmMultiplicativeFrobenius.h  AlgorithmNonSmoothNMF.h  Context.h  Dispatcher.h  FrobeniusResolver.cpp  FrobeniusResolver.h  KernelFillMatrix.cu  KernelFillMatrix.h  KernelHelper.cuh  KernelMakeNonNegative.cu  KernelMakeNonNegative.h  KernelMultiplyDivide.cu  KernelMultiplyDivide.h  KernelMultiplyTrace.cu  KernelMultiplyTrace.h  KernelNormalizeColumns.cu  KernelNormalizeColumns.h  KernelTraceMultiplication.cu  KernelTraceMultiplication.h  SingleGpuDispatcher.cpp  SingleGpuDispatcher.h  Summary.cpp  Summary.h
